# graph-editor-app

./: .env  Cargo.toml  README.md
migrations/2020-12-07-182311_create_graph/: up.sql
migrations/2020-12-07-184259_create_node/: down.sql  up.sql
migrations/2020-12-07-190059_create_edge/: down.sql  up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/edge/: mod.rs  model.rs  routes.rs
src/graph/: mod.rs  model.rs  routes.rs
src/node/: mod.rs  model.rs  routes.rs
static/: graph.js
templates/: base.html  error.html
templates/graphs/: graph.html  index.html  new.html
