[package]
authors = ["Tobias Kolditz <tbs.kldtz@gmail.com>"]
edition = "2018"
name = "graph_editor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4"
actix-http = "2.2"
actix-web = "3"
askama = "0.10"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["numeric", "postgres", "r2d2", "chrono"]}
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"